fix bug: NSNoti observer being added twice, resulting in duplicate sets being created and displayed in exercise history

--- a/levo/levo/Base.lproj/Main.storyboard
+++ b/levo/levo/Base.lproj/Main.storyboard
@@ -108,7 +108,7 @@
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sYp-6Y-4ip" customClass="LineChartView" customModule="Charts">
                                 <rect key="frame" x="0.0" y="100.5" width="414" height="400"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="400" id="Iut-25-tcc"/>
                                 </constraints>
@@ -735,6 +735,9 @@
         <image name="person.circle" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemIndigoColor">
+            <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
